<resources>
    <string name="app_name">PracticePro</string>
    <plurals name="has_been_clicked">
        <item quantity="one">Good job!</item>
        <item quantity="other">Keep it up!</item>
    </plurals>
    <string name="button">Yes</string>
    <string name="have_you_practiced_today">Have you practiced today?</string>
    <string name="leafs">leafs</string>
    <string name="piano">piano</string>
    <string name="how_to_prepare_for_your_audition">How to prepare for your audition</string>
    <string name="whether_you_ve_been_playing_for_one_year_or_ten_we_can_all_get_some_nerves_when_its_audition_time_while_a_little_nervousness_is_healthy_you_don_t_want_to_be_completely_nervous_one_of_the_best_ways_to_help_with_nerves_is_to_be_prepared_heres_an_example_of_how_to_set_yourself_up_for_success">
        Whether you’ve been playing for one year or ten, we can all get some nerves when its audition time. While a
        little nervousness is healthy, you don’t want to be completely nervous! One of the best ways to help with nerves
        is to be prepared. Heres an example of how to set yourself up for success.
    </string>
    <string name="one_month_before">One Month Before</string>
    <string name="this_is_when_we_want_to_be_running_through_our_solos_and_scales_here_we_ve_set_up_a_sample_practice_session">
        This is when we want to be running through our solos and scales. Here we’ve set up a sample practice session.
    </string>
    <string name="add_this_to_my_calender">Add this to my calender</string>
    <string name="piano_man">Piano</string>
    <string name="note">note</string>
    <string name="_4_out_of_5_hours">4 out of 5 hours</string>
    <string name="keep_practicing">Keep Practicing!</string>
    <string name="make_sure_you_re_cleaning_your_instrument">Make sure you\'re cleaning your instrument!</string>
    <string name="chloe_423_hrs">Chloe 423 hrs</string>
    <string name="hadley_350_hrs">Hadley 350 hrs</string>
    <string name="max_456_hrs">Max 456 hrs</string>
    <string name="_4">4</string>
    <string name="days_until_audition">Days until audition!</string>
    <string name="chloe">chloe</string>
    <string name="hadley">hadley</string>
    <string name="calander">calander</string>
    <string name="max">max</string>
    <string name="how_to_prepare_for_your_audition2">How to prepare for your audition</string>
    <string name="audition">How to prepare for your audition</string>
    <string name="get_started">Get started</string>
    <string name="background">background</string>
    <string name="practice">Practice</string>
    <string name="pro">Pro</string>
    <string name="name">Name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="name2">Name</string>
    <string name="welcome">Welcome,</string>
    <string name="username">UserName</string>
    <string name="calendaricon">calendaricon</string>

    <string name="practicedash">Practice</string>
    <string name="lessons">Lessons</string>
    <string name="tools">Tools</string>
    <string name="musicnoteicon">musicnoteicon</string>
    <string name="pianoicon">pianoicon</string>
    <string name="metronomeicon">metronomeicon</string>
    <string name="onboardbackground">onboardbackground</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="what_instrument_do_you_play">What instrument do you play?</string>
    <string name="select">Select</string>
    <string name="trombone">trombone</string>
    <string name="tromboneciricle">tromboneciricle</string>
    <string name="calendar">Calendar</string>
    <string name="metronome">Metronome</string>
    <string name="tunerbtn">Tunerbtn</string>
    <string name="metromepic">metromepic</string>
    <string name="calendarbtn">calendar</string>
    <string name="toolsbtn">Tools</string>
    <string name="lessonsbtns">Lessons</string>
    <string name="practicebtns">Practice</string>
    <string name="metronomebtns">metronomebtn</string>
    <string name="tunerbtns">Tuner</string>
    <string name="search">search</string>
    <string name="learn_to_flutter_tounge">Learn to Flutter Tounge</string>
    <string name="how_your_instrument_works">How Your Instrument Works</string>
    <string name="high_note_boot_camp">High Note Boot Camp</string>
    <string name="piano_basics">Piano Basics</string>
    <string name="theory_intermediate">Theory Intermediate</string>
    <string name="perfect_positioning">Perfect Positioning</string>
    <string name="theory_101">Theory 101</string>
    <string name="bluenote">bluenote</string>
    <string name="yellownote">yellownote</string>
    <string name="rednote">rednote</string>

    <string name="practicepractice">practicepractice</string>
    <string name="timeleft">timeleft</string>
    <string name="scales">Scales</string>
    <string name="run_through_the_scales_you_know">Run through the scales you know</string>
    <string name="try_practicing_some_new_ones">Try practicing some new ones!</string>
    <string name="make_sure_you_play_with_different_tempos_and_rhythms">Make sure you play with different tempos and
        rhythms.
    </string>
    <string name="finish">Finish</string>
    <string name="practiceplswrk">Practice</string>
    <string name="line">line</string>
    <string name="practice_complete">Practice Complete!</string>
    <string name="scalespractice">Scales</string>
    <string name="etudies">Etudies</string>
    <string name="solo">Solo</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_1_hour">1 Hour</string>
    <string name="dashboardpractice">Dashboard</string>
    <string name="tuner">tuner</string>
    <string name="div_icons_made_by_a_href_https_www_flaticon_com_authors_nikita_golubev_title_nikita_golubev_nikita_golubev_a_from_a_href_https_www_flaticon_com_title_flaticon_www_flaticon_com_a_is_licensed_by_a_href_http_creativecommons_org_licenses_by_3_0_title_creative_commons_by_3_0_target_blank_cc_3_0_by_a_div">
        <![CDATA[<div>Icons made by <a href=https://www.flaticon.com/authors/nikita-golubev title=Nikita Golubev>Nikita Golubev</a> from <a href=https://www.flaticon.com/ title=Flaticon>www.flaticon.com</a> is licensed by <a href=http://creativecommons.org/licenses/by/3.0/ title=Creative Commons BY 3.0 target=_blank>CC 3.0 BY</a></div>]]></string>


</resources>
