<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="413dp"
            android:layout_height="196dp" app:srcCompat="@drawable/piano"
            android:id="@+id/imageView" android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/piano_man"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="487dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:text="@string/how_to_prepare_for_your_audition" android:fontFamily="@font/open_sans"
                android:textSize="24sp" android:textAlignment="center" android:textColor="@android:color/black"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/calendaricon"
                    android:id="@+id/imageView6" android:layout_weight="1"
                    android:contentDescription="@string/calendar"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/music" android:id="@+id/imageView7"
                    android:layout_weight="1" android:contentDescription="@string/musicnoteicon"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"
                    android:contentDescription="@string/calendarbtn" android:background="@color/colorPrimary"
                    android:fontFamily="@font/open_sans" android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/practicebtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"
                    android:contentDescription="@string/practice" android:fontFamily="@font/open_sans"
                    android:background="@color/colorPrimary" android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/pianoicon"
                    android:id="@+id/imageView8" android:layout_weight="1"
                    android:contentDescription="@string/pianoicon"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/metronome"
                    android:id="@+id/imageView9" android:layout_weight="1"
                    android:contentDescription="@string/metronomeicon"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/lessonsbtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="1"
                    android:background="@color/colorPrimary" android:fontFamily="@font/open_sans"
                    android:textColor="@android:color/white" android:contentDescription="@string/lessons"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/toolsbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button6" android:layout_weight="1"
                    android:background="@color/colorPrimary" android:fontFamily="@font/open_sans"
                    android:textColor="@android:color/white" android:contentDescription="@string/metronomeicon"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>