<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ImageView
            android:layout_width="412dp"
            android:layout_height="65dp" app:srcCompat="@drawable/selectfilter"
            android:id="@+id/imageView14"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/search"/>
    <ScrollView
            android:layout_width="395dp"
            android:layout_height="650dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView14"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="match_parent" android:layout_width="122dp">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/note"
                            android:id="@+id/imageView19" android:contentDescription="@string/bluenote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/note2"
                            android:id="@+id/imageView20" android:contentDescription="@string/yellownote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/note2"
                            android:id="@+id/imageView21" android:contentDescription="@string/yellownote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/notered"
                            android:id="@+id/imageView22" android:contentDescription="@string/rednote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/note"
                            android:id="@+id/imageView23" android:contentDescription="@string/bluenote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/note"
                            android:id="@+id/imageView24" android:contentDescription="@string/bluenote"/>
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="60dp" app:srcCompat="@drawable/notered"
                            android:id="@+id/imageView25" android:contentDescription="@string/rednote"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="match_parent" android:layout_width="260dp">
                    <TextView
                            android:text="@string/learn_to_flutter_tounge"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView12"
                            android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                    <TextView
                            android:text="@string/theory_101"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView18"
                            android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                    <TextView
                            android:text="@string/perfect_positioning"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView15" android:textSize="18sp"
                            android:fontFamily="@font/open_sans"/>
                    <TextView
                            android:text="@string/theory_intermediate"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView13"
                            android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                    <TextView
                            android:text="@string/piano_basics"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView14" android:textSize="18sp"
                            android:fontFamily="@font/open_sans"/>
                    <TextView
                            android:text="@string/high_note_boot_camp"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView17"
                            android:fontFamily="@font/open_sans" android:textSize="18sp"/>
                    <TextView
                            android:text="@string/how_your_instrument_works"
                            android:layout_width="match_parent"
                            android:layout_height="60dp" android:id="@+id/textView16" android:textSize="18sp"
                            android:fontFamily="@font/open_sans"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>