<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/circle"
            android:id="@+id/imageView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/timeleft" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView23"/>
    <TextView
            android:text="@string/scales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:textSize="38sp"
            android:textColor="@android:color/black" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/open_sans" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/run_through_the_scales_you_know"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:id="@+id/textView20" android:textAlignment="center"
            android:textSize="18sp" android:textColor="@android:color/black" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans" app:layout_constraintHorizontal_bias="0.502"/>
    <TextView
            android:text="@string/try_practicing_some_new_ones"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:id="@+id/textView21" android:textAlignment="center"
            android:textSize="18sp" android:textColor="@android:color/black" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:fontFamily="@font/open_sans"/>
    <TextView
            android:text="@string/make_sure_you_play_with_different_tempos_and_rhythms"
            android:layout_width="196dp"
            android:layout_height="85dp"
            android:id="@+id/textView22" android:textAlignment="center"
            android:textSize="18sp" android:textColor="@android:color/black" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/open_sans" app:layout_constraintHorizontal_bias="0.502"/>
    <Button
            android:text="@string/finish"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:id="@+id/button13" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView22" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary" android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/practiceplswrk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:fontFamily="@font/open_sans_bold" android:textSize="48sp" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:textColor="@android:color/black" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>