<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="574dp"
            android:layout_height="174dp" app:srcCompat="@drawable/piano"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/piano" android:scaleType="centerInside" android:cropToPadding="false"/>
    <TextView
            android:text="@string/how_to_prepare_for_your_audition"
            android:layout_width="413dp"
            android:layout_height="50dp"
            android:textSize="26sp"
            android:textColor="@android:color/background_light" android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:textAlignment="center" android:id="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/textView4" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/whether_you_ve_been_playing_for_one_year_or_ten_we_can_all_get_some_nerves_when_its_audition_time_while_a_little_nervousness_is_healthy_you_don_t_want_to_be_completely_nervous_one_of_the_best_ways_to_help_with_nerves_is_to_be_prepared_heres_an_example_of_how_to_set_yourself_up_for_success"
            android:layout_width="353dp"
            android:layout_height="135dp"
            android:id="@+id/textView4" android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="244dp"/>
    <TextView
            android:text="@string/one_month_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="24sp"
            android:fontFamily="sans-serif-black" android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="392dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="195dp"/>
    <TextView
            android:text="@string/this_is_when_we_want_to_be_running_through_our_solos_and_scales_here_we_ve_set_up_a_sample_practice_session"
            android:layout_width="353dp"
            android:layout_height="58dp"
            android:id="@+id/textView2" android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="440dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/add_this_to_my_calender"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:id="@+id/button" android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="528dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</android.support.constraint.ConstraintLayout>