<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/background"
            android:id="@+id/imageView4" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/trombone"/>
    <TextView
            android:text="@string/tell_us_about_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:fontFamily="@font/open_sans_bold" android:textSize="36sp" android:textAlignment="center"
            android:textColor="@android:color/white" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/what_instrument_do_you_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:fontFamily="@font/open_sans"
            android:textSize="20sp" android:textAlignment="center" android:textColor="@android:color/white"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="166dp"
            android:layout_height="168dp" app:srcCompat="@drawable/trombonecircle"
            android:id="@+id/imageView5" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/tromboneciricle"/>
    <Button
            android:text="@string/select"
            android:layout_width="117dp"
            android:layout_height="53dp"
            android:id="@+id/button2" android:background="@color/colorPrimary"
            android:fontFamily="@font/open_sans" android:textColor="@android:color/white"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>